Reduced dependency pom

--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,7 @@
                             <mainClass>com.anton.machine.MCS</mainClass>
                         </manifest>
                     </archive>
+                    <createDependencyReducedPom>false</createDependencyReducedPom>
                 </configuration>
             </plugin>
         </plugins>
