--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,11 @@
 
     <groupId>machine-code-simulator</groupId>
     <artifactId>machine-code-simulator</artifactId>
+    <packaging>pom</packaging>
     <version>1.0</version>
+    <modules>
+        <module>CPU-6502-Emulator</module>
+    </modules>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -40,7 +44,7 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.12</version>
+            <version>4.13.2</version>
             <scope>test</scope>
         </dependency>
         <!-- https://mvnrepository.com/artifact/org.mockito/mockito-core -->
@@ -74,7 +78,7 @@
                             <mainClass>com.anton.machine.MCS</mainClass>
                         </manifest>
                     </archive>
-                    <createDependencyReducedPom>false</createDependencyReducedPom>
+<!--                    <createDependencyReducedPom>false</createDependencyReducedPom>-->
                 </configuration>
             </plugin>
         </plugins>
